# config_file_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
release_notes/: v1.0.0.md  v1.0.1.md
src/config_file_manager/: __init__.py  config.py  config_json.py
src/config_manager/: __init__.py  __main__.py  config_yaml.py  crypto.py  database.py
tests/: config1.json  config1.yaml  config1_encryption  tests.py
